[package]
name = "six_degrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
lazy_static = "*"
home = "*"
md5 = "*"
reqwest = { version = "*", features = ["blocking", "gzip"] }
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
clap = { version = "*", features = ["derive"] }
sysinfo = "*"
hyper = { version = "*", features = ["full"] }
bincode = "*"
regex = "*"
url = "*"
panic-message = "*"

[dev-dependencies]
httpmock = "*"
